partial fix of spacing bugs

--- a/frontend/src/components/css/grid.css
+++ b/frontend/src/components/css/grid.css
@@ -1,11 +1,15 @@
 .mainBackground {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: space-between;
 	align-items: center;
 	background: linear-gradient(to bottom right, rgb(28, 229, 243), rgb(30, 142, 235));
 	width: 100%;
 	height: 100%;
+}
+
+.mainNavBar {
+	width: 0%; 
 }
 
 .outsideGrid {
@@ -281,16 +285,18 @@
 
 .menuIcon {
 	position: fixed;
-	top: 4%;
-	left: 5%;
+	top: 6%;
+	left: 7%;
 	height: 50px;
 	width: 60px;
+	z-index: 5;
 }
 
-.menuIcon .hamburger {
+
+.hamburger {
 	position:absolute;
-	left: 12px;
-	top: 8px;
+	/* left: 12px; */
+	/* top: 8px; */
 	transform: translate(-50%, -50%);
 	height: 4px;
 	width: 50px;
@@ -299,7 +305,7 @@
 	opacity: 0.5;
 }
 
-.menuIcon .hamburger:before {
+.hamburger:before {
 	position:absolute;
 	content: '';
 	height: 4px;
@@ -310,7 +316,7 @@
 	
 }
 
-.menuIcon .hamburger:after {
+.hamburger:after {
 	position:absolute;
 	content: '';
 	height: 4px;
@@ -335,8 +341,9 @@
 	position:fixed;
 	width: 150px;
 	left: 0px;
-	top: 70px;
-	height: 35vh;
+	/* top: 70px; */
+	/* height: 35vh; */
+	height: 50vh;
 	background-color:rgb(179, 197, 213);
 	color: #22313F;
 	/* -webkit-clip-path: polygon(0% 0%, 50% 0%, 0% 50%, 0% 100%); */
@@ -346,6 +353,7 @@
 	border: solid white 0.5px;
 	outline: none;
 }
+
 
 .hidebar {
 	position:fixed;
@@ -364,7 +372,7 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin-top: 33px;
+	margin-top: 100px;
 	list-style:none;
 	transform:translate(-50%, -50%);
 	text-align:center;
